# nimbus

./: .gitignore  LICENSE  README.md  nimbus.yaml
.github/workflows/: build-and-test-forge.yaml  build-and-test-forge.yaml.yml  build-and-test-nimbus.yaml  build-and-test-quorum.yaml
demo/: demo.sh
demo/images/: Dockerfile.job-service  Dockerfile.worker  build.sh
demo/job-service/: go.mod  handler_control.go  handler_stats.go  main.go
demo/web/: .gitignore  nuxt.config.ts  package-lock.json  package.json
demo/web/.nuxt/: components.d.ts  imports.d.ts  nitro.json  nuxt.json  tsconfig.json  tsconfig.server.json
demo/web/components/: CumulativeChart.vue  StatsCards.vue  TpsChart.vue  TransactionFeed.vue
demo/web/composables/: useStats.ts
demo/web/pages/: index.vue
demo/worker/: Cargo.toml
demo/worker/src/: main.rs
docs/: architecture.md
docs/forge/: forge-agent.md  forge.md  forged.md
docs/nimbus/: nimbus-registry.md  nimbusadm.md  nimbusctl.md
docs/quorum/: qctl.md  quorum-api.md  quorum-db.md  quorum-scheduler.md
forge/: Cargo.toml  build.rs
forge/src/: cgroup.rs  cli.rs  config.rs  container.rs  image.rs  isolation.rs  lib.rs  log.rs  main.rs
nimbus/: go.mod
nimbus/cmd/nimbus-registry/: main.go
nimbus/cmd/nimbusadm/: main.go
nimbus/cmd/nimbusctl/: main.go
plans/: demo-plan.md
quorum/: go.mod  go.sum  quorum.wal
scripts/: build-all.sh  build_test_image.sh  cluster.sh  generate.sh  install_all.sh  install_forge.sh  install_forge_agent.sh  install_nimbusctl.sh  install_quorum.sh  prepare-image.sh  start-cluster.sh  test.sh
(+43 files in other folders)
