[package]
name = "forge"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
nix = { version = "0.29", features = ["mount", "process", "signal", "user", "hostname", "fs"] }
libc = "0.2"
chrono = { version = "0.4", features = ["serde"] }
ulid = "1"
thiserror = "2"
anyhow = "1"
tar = "0.4"
flate2 = "1"

[dev-dependencies]
tempfile = "3"
