[package]
name = "forge"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
nix = { version = "0.29", features = ["mount", "process", "signal", "user", "hostname", "fs"] }
libc = "0.2"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tar = "0.4"
flate2 = "1"
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
reqwest = { version = "0.12", features = ["stream"] }
futures-core = "0.3"
futures-util = "0.3"
tower = "0.4"
tokio-stream = "0.1"
hyper-util = { version = "0.1", features = ["tokio"] }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "forge"
path = "src/main.rs"

[[bin]]
name = "forge-agent"
path = "src/bin/forge_agent.rs"

[[bin]]
name = "forged"
path = "src/bin/forged.rs"
